--- a/menu/templates/menu/index.html
+++ b/menu/templates/menu/index.html
@@ -1,6 +1,15 @@
+<!DOCTYPE html>
+<html>
+<body>
+
 {% load menu_tags %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'menu/style.css' %}" />
 {% draw_menu "polls_menu" %}
 
 <h2>Hello world</h2>
+
+<div style='position: fixed; right: 40px; top: 10px;'>{% draw_menu "another_menu" %}</div>
+
+</body>
+</html>
