--- a/menu/templates/menu/menu_item.html
+++ b/menu/templates/menu/menu_item.html
@@ -1,23 +1,66 @@
 {% load menu_tags %}
 <li>{% if request.path == menu_item.url or request.path == menu_item.reverse_named_url %}
-    <div><a href="{% if menu_item.url %}{{ menu_item.url }}{% else %}{% url menu_item.named_url %}{% endif %}" class="current">{{ menu_item.caption }}</a></div>
-        {% if menu_item.children %}
+    <div>
+      <a href="{% if menu_item.url %}
+                  {{ menu_item.url }}
+              {% else %}
+                  {% if menu_item.arg %}
+                      {% url menu_item.named_url menu_item.arg %}
+                  {% else %}
+                      {% url menu_item.named_url %}
+                  {% endif %}
+              {% endif %}" class="current">{{ menu_item.caption }}</a>
+    </div>
+      {% if menu_item.children %}
       <ul>
           {% for child_item in menu_item.children %}
-          <li><div><a href="{{ child_item.url }}" class="">{{ child_item.caption }}</a></div></li>
+          <li>
+            <div>
+              <a href="{% if child_item.url %}
+                          {{ child_item.url }}
+                      {% else %}
+                          {% if child_item.arg %}
+                              {% url child_item.named_url child_item.arg %}
+                          {% else %}
+                              {% url child_item.named_url %}
+                          {% endif %}
+                      {% endif %}">{{ child_item.caption }}</a>
+            </div>
+          </li>
           {% endfor %}
       </ul>
       {% endif %}
     {% elif request.path in menu_item.siblings_urls  %}
-    <div><a href="{% if menu_item.url %}{{ menu_item.url }}{% else %}{% url menu_item.named_url %}{% endif %}">{{ menu_item.caption }}</a></div>
+    <div>
+      <a href="{% if menu_item.url %}
+                  {{ menu_item.url }}
+              {% else %}
+                  {% if menu_item.arg %}
+                      {% url menu_item.named_url menu_item.arg %}
+                  {% else %}
+                      {% url menu_item.named_url %}
+                  {% endif %}
+              {% endif %}">{{ menu_item.caption }}</a>
+    </div>
     {% else %}
-    <div><a href="{% if menu_item.url %}{{ menu_item.url }}{% else %}{% url menu_item.named_url %}{% endif %}">{{ menu_item.caption }}</a></div>
-        {% if menu_item.children %}
+    <div>
+      <a href="{% if menu_item.url %}
+                  {{ menu_item.url }}
+              {% else %}
+                  {% if menu_item.arg %}
+                      {% url menu_item.named_url menu_item.arg %}
+                  {% else %}
+                      {% url menu_item.named_url %}
+                  {% endif %}
+              {% endif %}">{{ menu_item.caption }}</a>
+    </div>
+      {% if menu_item.children and request.path in menu_item.descendants_urls %}
+
       <ul>
-          {% for child_item in menu_item.children %}
+        {% for child_item in menu_item.children %}
           {% show_menu_item child_item %}
-          {% endfor %}
+        {% endfor %}
       </ul>
-        {% endif %}
+      {% endif %}
     {% endif %}
 </li>
